Add PDAL point cloud transforms for Apache Hop
- Point Cloud Reader/Info/Crop/Reproject/Writer based on the neutral
  PointCloudDataset model; planning and execution are separated and the
  writer executes the accumulated plan in a single PDAL call
- PdalBackend (PointCloudBackend) on top of pdal-ffm-core with the bundled
  PDAL runtime; pipeline JSON rendering with typed boolean/number options;
  overwrite handled in Java because PDAL writers have no common option
- plugin ZIP with the transform JAR, pdal-ffm-core and the platform natives
  classifier JAR; the shared point cloud model is referenced through
  dependencies.xml so it keeps a single class identity
- documentation pages and examples for every transform (documentation lint
  passes), README and architecture notes
- CI builds the complete chain per platform (PDAL natives -> Point Cloud
  Type plugin -> this plugin) and runs the native integration test

Verified end to end in an Apache Hop 2.19 client: reader -> crop -> writer
writes 20001 points in one PDAL execution, reprojection to EPSG:4326 works.